add WEEK07 POPQUIZ

--- a/Docusaurus/blog/authors.yml
+++ b/Docusaurus/blog/authors.yml
@@ -21,3 +21,15 @@ slorber:
     linkedin: sebastienlorber
     github: slorber
     newsletter: https://thisweekinreact.com
+
+zerothy:
+  name: Joe Mathew Rusli
+  title: Penggemar Joshua
+  url: https://github.com/zerothy
+  image_url: https://github.com/zerothy.png
+
+hyvos07:
+  name: Daniel Liman
+  title: Penggemar Stef
+  url: https://github.com/hyvos07
+  image_url: https://github.com/hyvos07.png
